--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "cpr"]
 	path = cpr
 	url = https://github.com/libcpr/cpr.git
+[submodule "doctest"]
+	path = doctest
+	url = https://github.com/doctest/doctest.git
